# agent-innovator-lab

./: .env.sample  .gitignore  README.md  _config.yml  index.md  index_en.md  index_ko.md  requirements.txt  sample.env
.github/workflows/: jekyll-gh-pages.yml
0_basic-agent/: README.md  building-abstract-agents.ipynb
0_basic-agent/AgentFramework/: 1_basic-concept-with-msaf.ipynb  README.md
0_basic-agent/AutoGen/: 1_basic-concept-with-autogen-studio.ipynb  README.md
0_basic-agent/AzureAIAgent/: bing-grounding-test.ipynb
0_basic-agent/LangGraph/: README.md  langgraph.json  (+1 more)
0_basic-rag/: 1_basic-rag.ipynb  1_basic_rag.ipynb  README.md  requirements.txt  sample.env
1_agentic-design-ptn/: README.md
1_eval-design-ptn/: requirements.txt  sample.env
2_eval-design-ptn/: .env.sample  README.md  sample.env
3_optimization-design-ptn/: README.md
4_general_inquiry_sample/: .env.sample  01_query-rewrite-websearch.ipynb  02_plan-execute-for-search.ipynb  README.md  [challenge]01_query-rewrite-websearch.ipynb  [challenge]02_plan-execute-for-search.ipynb  llm_websearch_crawling.ipynb  llm_websearch_crawlingn.ipynb  plan-execute.ipynb  pyproject.toml  xx_google_search.ipynb
4_general_inquiry_sample/prompts/: generate_prompt.yaml  rewrite_prompt.yaml
4_general_inquiry_sample/slt/: 01_query-rewrite-websearch.ipynb  02_plan-execute-for-search.ipynb
4_general_inquiry_sample/slt/prompts/: planner_prompt.yaml
lab0_basic_rag/: 1_basic_rag.ipynb
lab1_evaluation/: README.md
lab_intermission/: README.md
prompts/: code-system-prompt-kr.yaml
utils/: search_utils.py
(+132 files in other folders)
